# obs_lsst

./: .gitattributes  .gitignore  COPYRIGHT  README.md  SConstruct  createCalibs  ingest  processCcd  pyproject.toml  runIsr  runPipeline  setup.cfg
auxTel/: SConscript
bin.src/: genDefectFits.py  genDefectRegistry.py  generateCamera.py  makeFpSummary.py  phosimToRafts.py  preparePhotodiode  rewrite_ts8_qe_files.py  segmentationToRafts.py  updateFromEOTest.py  update_lsstcam_EO_results.py  update_raft.py
config/: .ruff.toml  analysisToolsCatalogMatchVisit.py  analysisToolsPhotometricCatalogMatchVisit.py  apertures.py  assembleCellCoadd.py  assembleCoadd.py  background.py  bf.py  bias.py  calibrate.py  calibrateImage.py  charImage.py  characterizeImage.py  cmodel.py  coaddAnalysis.py  coaddBase.py  coaddDriver.py  coaddDriver_noPSF.py  colorAnalysis.py  compareVisitAnalysis.py  compareWarpAssembleCoadd.py  convertRepo.py  convolvedFluxes.py  dark.py  defineVisits.py  filterMap.py  findDefects.py  flat.py  focalPlaneBackground.py  forcedPhotCcd.py  forcedPhotCoadd.py  gaap.py  gbdesAstrometricFit.py  hsm.py  ingest.py  ingestCalibs.py  isr.py  jointcal.py  kron.py  ksigmamom.py  (+27 more)
corrections/: LATISS-AT_O_20190308_000139.yaml  LATISS-AT_O_20190308_000149.yaml  LATISS-AT_O_20190329_000022.yaml  LATISS-AT_O_20190927_000015.yaml  LATISS-AT_O_20190927_000106.yaml  LATISS-AT_O_20191118_000024.yaml  LATISS-AT_O_20200128_000200.yaml  LATISS-AT_O_20200212_000022.yaml  LATISS-AT_O_20200217_000221.yaml  LATISS-AT_O_20200217_000223.yaml  LATISS-AT_O_20200217_000224.yaml  (+3509 more)
(+1203 files in other folders)
